add new section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<a href="" class="header__logo">
 						Relvise
 					</a>
-					<nav class="header__menu menu">
+					<!-- <nav class="header__menu menu">
 						<ul class="menu__list">
 							<li class="menu__item">
 								<a href="" class="menu__link">Home</a>
@@ -29,7 +29,7 @@
 								<a href="" class="menu__link">Contact</a>
 							</li>
 						</ul>
-					</nav>
+					</nav> -->
 				</div>
 			</header>
 			<main class="page">
@@ -50,7 +50,7 @@
 						<img src="img/mainblock/cover.jpg" alt="cover">
 					</div>
 				</div>
-				<section class="page__services services">
+				<!-- <section class="page__services services">
 					<div class="services__container _container">
 						<div class="services__body">
 							<div class="services__column">
@@ -76,7 +76,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 				<section class="page__advantages advantages">
 					<div class="advantages__container _container">
 						<div class="advantages__header header-block">
