--- a/index.html
+++ b/index.html
@@ -9,29 +9,6 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header class="header">
-				<div class="header__container _container">
-					<a href="" class="header__logo">
-						Relvise
-					</a>
-					<!-- <nav class="header__menu menu">
-						<ul class="menu__list">
-							<li class="menu__item">
-								<a href="" class="menu__link">Home</a>
-							</li>
-							<li class="menu__item">
-								<a href="" class="menu__link">Product</a>
-							</li>
-							<li class="menu__item">
-								<a href="" class="menu__link">Pricing</a>
-							</li>
-							<li class="menu__item">
-								<a href="" class="menu__link">Contact</a>
-							</li>
-						</ul>
-					</nav> -->
-				</div>
-			</header>
 			<main class="page">
 				<div class="page__main-block main-block">
 					<div class="main-block__container _container">
@@ -50,7 +27,7 @@
 						<img src="img/mainblock/cover.jpg" alt="cover">
 					</div>
 				</div>
-				<!-- <section class="page__services services">
+				<section class="page__services services">
 					<div class="services__container _container">
 						<div class="services__body">
 							<div class="services__column">
@@ -76,7 +53,7 @@
 							</div>
 						</div>
 					</div>
-				</section> -->
+				</section>
 				<section class="page__advantages advantages">
 					<div class="advantages__container _container">
 						<div class="advantages__header header-block">
