--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
 		<div class="wrapper">
+			<header class="header">
+				<div class="container">
+					<div class="row">
+						
+					</div>
+				</div>
+			</header>
 			<main class="page">
 				<div class="page__main-block main-block">
 					<div class="main-block__container _container">
