add lorem to my header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header class="header">
 				<div class="container">
 					<div class="row">
-						
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi quidem ipsam sequi commodi, et tenetur doloribus quas porro harum illum in minus repellendus quos qui sunt voluptatibus! Eos, eveniet iusto?
 					</div>
 				</div>
 			</header>
