add new lolem and new row

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 					<div class="row">
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi quidem ipsam sequi commodi, et tenetur doloribus quas porro harum illum in minus repellendus quos qui sunt voluptatibus! Eos, eveniet iusto?
 					</div>
+					<div class="row">
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus modi error corrupti, vero esse ut soluta. Facere dolor quos dolorem qui optio vero. Perferendis ex, eos dolorum fugit necessitatibus laudantium!
+					</div>
 				</div>
 			</header>
 			<main class="page">
